# NMIS-EcoPass

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  PRD.md  README.md  __init__.py  datamodel.csv  datamodel.xlsx  download_schemas.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test-requirements.txt
.agent/workflows/: import-dpp-models.md
NMIS_Ecopass/: utils.py
NMIS_Ecopass/models/: __init__.py  additionalData.py  carbonFootprint.py  circularity.py  digitalProductPassport.py  materialComposition.py  metadata.py  productIdentifier.py
NMIS_Ecopass/utils/: utils.py
examples/: battery_passport_schema.json  battery_production.xml  csv_to_textile.yaml  demo.py  isa95_to_battery.yaml  output_api_validated.json  output_battery_dpp.json  output_battery_mapping.json  output_stepwise.json  sample_api_payload.json  textile_products.csv
scripts/: import_dpp_models.py  walkthrough.md
src/NMIS_Ecopass/: __init__.py
src/NMIS_Ecopass/connectors/: base.py  csv_connector.py  excel_connector.py  factory.py  isa95.py
src/NMIS_Ecopass/core/: bridge.py  config.py  exception.py
src/NMIS_Ecopass/exporters/: base.py  factory.py  jsonld.py
src/NMIS_Ecopass/mapping/: engine.py  loader.py  mapping_schema.yaml  transforms.py
src/NMIS_Ecopass/models/: __init__.py  additionalData.py  carbonFootprint.py  circularity.py  digitalProductPassport.py  materialComposition.py  metadata.py  productIdentifier.py  registry.py  remanufacture.py
src/NMIS_Ecopass/models/BatteryPass/: __init__.py  battery_passport.py  carbon_footprint.py  circularity.py  general_product_information.py  labeling.py  material_composition.py  performance_and_durability.py  supply_chain_due_diligence.py
src/NMIS_Ecopass/models/BatteryPass/schemas/: CarbonFootprintForBatteries-schema.json  Circularity-schema.json  Labeling-schema.json  MaterialComposition-schema.json  PerformanceAndDurability-schema.json  SupplyChainDueDiligence-schema.json
src/NMIS_Ecopass/models/ReMakeDPP/: additionalData.py  circularity.py  materialComposition.py  productIdentifier.py
src/NMIS_Ecopass/utils/: __init__.py  utils.py
tests/: UXpackage.py  test_battery_pass.py  test_digital_product_passport.py  test_models.py  test_qr_generator.py
