[tool.poetry]
name = "NMIS_Ecopass"
version = "0.1.14"
description = "A package for creating and managing digital product passports"
authors = ["Syed Awais Hassan Munawar <syed.munawar@strath.ac.uk>"]
readme = "README.md"
packages = [{include = "NMIS_Ecopass", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {version = "^2.0"}
qrcode = ">=7.4.2"
Pillow = ">=10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^3.8.4"
mypy = "^1.0.0"
isort = "^5.0.0"
pre-commit = "^2.0.0"
pytest = "^6.2.5"
pytest-cov = "^2.0.0"
pytest-mock = "^3.0.0"



[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"